objects/ASI_eForm_User_System_Permission__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_BO_Additional_Remarks__c</fullName>
        <label>Addition Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_PR_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR System</label>
        <referenceTo>ASI_eForm_PR_System__c</referenceTo>
        <relationshipLabel>User System Permissions</relationshipLabel>
        <relationshipName>ASI_eForm_User_System_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Permission_TypeN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Type</label>
        <referenceTo>ASI_eForm_Permission_Type__c</referenceTo>
        <relationshipLabel>User System Permissions</relationshipLabel>
        <relationshipName>ASI_eForm_User_System_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Profile_Name__c</fullName>
        <label>User</label>
        <referenceTo>ASI_eForm_User_Profile__c</referenceTo>
        <relationshipLabel>ASI eForm User System Permissions</relationshipLabel>
        <relationshipName>ASI_eForm_User_System_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ASI eForm User System Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_User_Profile_Name__c</columns>
        <columns>ASI_eForm_PR_System__c</columns>
        <columns>ASI_eForm_Permission_TypeN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>USYSK-{00000000}</displayFormat>
        <label>Permission Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI eForm User System Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_BO_Additional_Remarks_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Permission_TypeN__c != null &amp;&amp;  ASI_eForm_Permission_TypeN__r.ASI_eForm_Additional_Info_Required__c &amp;&amp;   ISBLANK(ASI_eForm_BO_Additional_Remarks__c)</errorConditionFormula>
        <errorMessage>BO Additional Remarks cannot be empty based on selected Permission Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Permission_Type_Check</fullName>
        <active>false</active>
        <errorConditionFormula>ASI_eForm_Permission_TypeN__r.ASI_eForm_PR_System__r.Id !=  ASI_eForm_PR_System__r.Id</errorConditionFormula>
        <errorDisplayField>ASI_eForm_BO_Additional_Remarks__c</errorDisplayField>
        <errorMessage>The Permission Type is not applied to PR System.</errorMessage>
    </validationRules>
</CustomObject>